--- a/02-Animated-Login-Form/css/styles.css
+++ b/02-Animated-Login-Form/css/styles.css
@@ -122,7 +122,7 @@ body {
     }
 
     100% {
-        border-color: deepskyblue;
-        color: deepskyblue;
+        border-color: aliceblue;
+        color: aliceblue;
     }
 }
